--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
     "handlebars": "^4.7.7",
+    "mongodb": "^4.3.1",
     "nodemailer": "^6.7.2"
   }
 }
